color changed gap fixed

--- a/src/style/CityData.css
+++ b/src/style/CityData.css
@@ -82,7 +82,7 @@
 }
 
 .city-top-right {
-  width: 40%;
+  width: 33%;
   height: 86%;
   display: flex;
   flex-direction: column;
@@ -125,26 +125,34 @@
   flex-direction: row;
   background-color: #383b47;
 }
-.line {
+.left-line,
+.right-line {
   position: relative;
 }
 
-.line:after {
+.left-line:after {
   content: "";
   position: absolute;
-  left: -10px;
   border-right: 1px solid #4d5262;
   height: 40px;
+  right: -4px;
+}
+.right-line:after {
+  content: "";
+  position: absolute;
+  border-right: 1px solid #4d5262;
+  height: 40px;
+  left: -6px;
 }
 .city-bottom-left {
-  width: 40%;
+  width: 33%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 2px;
   position: relative;
   top: 3px;
+  padding-left: 8px;
 }
 
 .pressure,
@@ -157,16 +165,13 @@
 }
 
 .city-bottom-middle {
-  width: 33%;
+  width: 35%;
   height: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
   position: relative;
-  margin-top: 6px;
-  padding-bottom: 6px;
-  left: -15px;
 }
 
 .wind-direction-image,
@@ -192,7 +197,7 @@
   flex-direction: row;
   justify-content: center;
   font-size: 10px;
-  bottom: 8px;
+  padding-top: 9px;
 }
 
 .wind-direction-degree {
@@ -200,14 +205,13 @@
 }
 
 .city-bottom-right {
-  width: 27%;
+  width: 33%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: left;
   font-size: 10px;
   justify-content: center;
-  margin-left: 10px;
+  padding-right: 8px;
   line-height: 1.5;
 }
 .sun-rise,
